# wangrcli

./: .gitignore  README.md  autotrading.py  general-test.md  liquidations.csv  market-brief.md  polymarket-test.md  pyproject.toml  summary.md  top-traders-week.md  top-traders.md  top_10_whales_by_position.csv  trending-markets.md  wangr_cli.md  whales.csv
src/wangr/: api.py  arbitrage.py  base_screen.py  chat_screen.py  config.py  context_commands_mixin.py  context_store.py  dashboard.tcss  dashboard_screen.py  data.py  entity_metadata.py  file_ops_mixin.py  formatters.py  hyperliquid.py  liquidations.py  main.py  market_brief.py  polymarket.py  polymarket_agent_screen.py  polymarket_full.py  polymarket_whales.py  settings.py  settings_screen.py  sparkline.py  stream_handler.py  tab_highlight.py  table_screen.py  tools.py  utils.py  whales.py  whales_btc.json  whales_full.py  widgets.py  woi.py  woi_full.py
src/wangrcli/: __init__.py  arbitrage.py  base_screen.py  chat_screen.py  dashboard.tcss  dashboard_screen.py  data.py  hyperliquid.py  liquidations.py  main.py  market_brief.py  polymarket.py  sort_modal.py  styles.css  tools.py  utils.py  whales.py  whales_full.py  woi.py  woi_full.py
tests/: test_arbitrage.py  test_formatters.py  test_sparkline.py  test_utils.py
