[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "wangr"
version = "0.1.0"
description = "Terminal market dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "hatch>=1.16.2",
    "plotille>=5.0.0",
    "requests>=2.32.5",
    "textual>=6.11.0",
    "textual-dev>=1.8.0",
]

[project.scripts]
wangr = "wangr.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wangr"]
include = [
    "src/wangr/dashboard.tcss",
    "src/wangr/styles.css",
    "src/wangr/whales_btc.json",
]
